--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Bot Application1/bin/Microsoft.Rest.ClientRuntime.xml
 Bot Application1/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 Bot Application1/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 Bot Application1/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Bot Application1/obj/Release
+/packages
+/Bot Application1/bin
