--- a/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1.csproj
@@ -105,7 +105,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Intent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="Sentiment.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
