--- a/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Intent.cs" />
+    <Compile Include="Intents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="Sentiment.cs" />
