--- a/Bot Application1/Web.config
+++ b/Bot Application1/Web.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  
+  <connectionStrings>
+      <add name="hallebotConnectionString" connectionString="Data Source=hallebot.database.windows.net;Initial Catalog=hallebot;User ID=hallebot;Password=H@llebot;Encrypt=True;TrustServerCertificate=False"
+          providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <!-- update these with your appid and one of your appsecret keys-->
     <add key="AppId" value="YourAppId" />
