--- a/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="Sentiment.cs" />
+    <Compile Include="SentimentRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
