--- a/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Intents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
+    <Compile Include="ResponseGenerator.cs" />
     <Compile Include="Sentiment.cs" />
     <Compile Include="SentimentRequest.cs" />
   </ItemGroup>
