--- a/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Greeting.cs" />
     <Compile Include="Intent.cs" />
     <Compile Include="Intents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
